# jobhunt

./: .gitignore  LICENSE  README.md  deploy.sh  populate-db.sh  pyproject.toml
docs/superpowers/plans/: 2026-04-08-database-expansion.md  2026-04-09-fast-incremental-search.md
docs/superpowers/specs/: 2026-04-08-database-expansion-design.md  2026-04-09-fast-incremental-search-design.md
src/jobhunt/: __init__.py  __main__.py  cache.py  cli.py  client.py  db.py  discovery.py  display.py  fingerprint.py  models.py  perplexity.py  search.py
src/jobhunt/data/: companies.json
src/jobhunt/discovery_sources/: __init__.py  aggregators.py  ats_detector.py  github_lists.py
src/jobhunt/providers/: __init__.py  ashby.py  bamboohr.py  base.py  breezy.py  greenhouse.py  homerun.py  jazzhr.py  lever.py  personio.py  recruitee.py  rippling.py  smartrecruiters.py  teamtailor.py  workable.py
tests/: conftest.py  test_cache.py  test_display.py  test_fingerprint.py
