[project]
name = "jobhunt"
version = "0.1.0"
description = "CLI tool to search for jobs across ATS platforms (Greenhouse, Lever, Ashby, Rippling, Recruitee)"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
jobhunt = "jobhunt.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobhunt"]
