[project]
name = "jobhunt"
version = "0.1.0"
description = "CLI tool to search for jobs across ATS platforms (Greenhouse, Lever, Ashby, Rippling, Recruitee)"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
jobhunt = "jobhunt.cli:app"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jobhunt"]

[tool.pytest.ini_options]
addopts = "-p no:alembic"
